<resources>
    <string name="app_name">News App</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_news">No news</string>

    <!-- menu -->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- menu search -->
    <string name="settings_search_label">Search</string>
    <string name="settings_search_key" translatable="false">search</string>
    <string name="settings_search_default" translatable="false">music</string>

    <!-- menu size page -->
    <string name="settings_size_label">Page size</string>
    <string name="settings_size_key" translatable="false">pageSize</string>
    <string name="settings_size_default" translatable="false">10</string>

    <!-- menu order by -->
    <string name="settings_order_label">Order by</string>
    <string name="settings_order_key" translatable="false">orderBy</string>
    <string name="settings_order_default" translatable="false">newest</string>

    <!-- menu order by options -->
    <string name="settings_order_newest" translatable="false">newest</string>
    <string name="settings_order_relevance" translatable="false">relevance</string>
</resources>
